Moving several values previously being calculated, ad-hoc, in individual instances of different water types, into the prototype, so that they're accessible to all child water objects, but most importantly, so that they're accessible in the execution context of initializer options for child properties (particularly so we can set them on our particle_attache_slicer values without having to copy-paste the logic).

--- a/data/object_prototypes/general/liquid.cfg
+++ b/data/object_prototypes/general/liquid.cfg
@@ -47,10 +47,17 @@ properties: {
 	remove_water_effect: "commands :: remove_water(_x_bound, _y_bound, _x2_bound, _y2_bound)",
 
 
-	
-	water_width: "abs(_x2_bound - _x_bound)",
-	water_height: "abs(dump(_y2_bound) - dump(_y_bound))",
+	/*
+		Values predominantly used for the particle system slicers.
+	*/	
+
+	slice_threshold: "decimal :: 300.0",
+	water_width: "int :: abs(_x2_bound - _x_bound)",
+	water_height: "int :: abs(dump(_y2_bound) - dump(_y_bound))",
 	water_boundaries: "[int,int,int,int] :: [_x_bound, _y_bound, _x2_bound, _y2_bound]",
+	child_system_count: "int :: lib.math.ceil((_x2_bound - _x_bound) / slice_threshold )",
+	slice_width: "int :: lib.math.round(water_width / child_system_count)",
+	slice_count: "decimal :: lib.math.ceil(water_width / slice_threshold )",
 
 
 #-------------------------- constructors --------------------------#
