--- a/data/objects/effects/attaches/particle_attache_slicer.cfg
+++ b/data/objects/effects/attaches/particle_attache_slicer.cfg
@@ -31,14 +31,13 @@ properties: {
 	turn_on: "map(active_child_systems, value.turn_on)",
 
 
-	create_children: "[
-
+	create_children: "execute(me, [
 		map(child_systems, 'child', add_object(child)),
 
 		;
 
 		map(
-			me.active_child_systems,
+			active_child_systems,
 			[
 				set(value.relative_x,  new_relative_x ),
 				set(value.activation_border,  slice_width),
@@ -65,7 +64,7 @@ properties: {
 
 				where new_relative_x = (-(water_width / 2) + (slice_width * index) + (slice_width/2))
 		),
-	]",
+	])",
 #-------------------------- vars --------------------------#
 	_particle_type: {
 		type: "string",
