--- a/data/objects/effects/liquids/whitewater_controller.cfg
+++ b/data/objects/effects/liquids/whitewater_controller.cfg
@@ -20,7 +20,11 @@ properties: {
 			time_to_die: 0,
 			x:x, y:y,
 			zorder: lib.zorder.get('liquid_particle_effects'),
-			child_system_count: (lib.math.ceil((_x2_bound - _x_bound) / 300.0 ))
+			child_system_count: child_system_count,
+			slice_width: slice_width,
+			water_width: water_width,
+			water_height: water_height,
+			water_boundaries: water_boundaries,
 		})",
 		persistent: false,
 	},
@@ -32,7 +36,11 @@ properties: {
 			time_to_die: 0,
 			x:x, y:y,
 			zorder: lib.zorder.get('liquid_particle_effects'),
-			child_system_count: (lib.math.ceil((_x2_bound - _x_bound) / 300.0 ))
+			child_system_count: child_system_count,
+			slice_width: slice_width,
+			water_width: water_width,
+			water_height: water_height,
+			water_boundaries: water_boundaries,
 		})",
 		persistent: false,
 	},
@@ -81,33 +89,9 @@ properties: {
 	]",
 
 
-	slice_threshold: "decimal :: 300.0",
-	slice_count: "decimal :: lib.math.ceil(water_width / slice_threshold )",
-	slice_width: "decimal :: water_width / slice_count",
-
-
 
 	setup_particles: "[
-		map(
-			volume_bubbles.active_child_systems,
-			set(value.clip_area, [_x_bound-mid_x, _y_bound-mid_y, _x2_bound - _x_bound, _y2_bound - _y_bound, ]),
-		),
-		map(
-			volume_bubbles.active_child_systems,
-			[
-				set(value.relative_x,  new_relative_x ),
-				set(value.activation_border,  slice_width),
-				set(value.activation_area, new_activation_rectangle ),
-			]
-				where new_activation_rectangle = [
-					volume_bubbles.mid_x - new_relative_x - value.w/2 - 150,
-					volume_bubbles.mid_y - value.h/2 - 150,
-					volume_bubbles.mid_x + new_relative_x + value.w/2 + 150,
-					volume_bubbles.mid_y + value.h/2 + 150
-				]
-				where new_relative_x = (-(water_width / 2) + (slice_width * index) + (slice_width/2))
-		),
-		;
+
 		map(
 			volume_bubbles.active_child_systems,
 			set(value.particles,
@@ -145,28 +129,6 @@ properties: {
 
 		;
 
-		map(
-			water_churn.active_child_systems,
-			set(value.clip_area, [_x_bound-mid_x, _y_bound-mid_y, _x2_bound - _x_bound, _y2_bound - _y_bound, ]),
-		),
-		map(
-			water_churn.active_child_systems,
-			[
-				set(value.relative_x,  new_relative_x ),
-				set(value.activation_border,  slice_width),
-				set(value.activation_area, new_activation_rectangle ),
-			]
-				where new_activation_rectangle = [
-					water_churn.mid_x - new_relative_x - value.w/2 - 150,
-					water_churn.mid_y - value.h/2 - 150,
-					water_churn.mid_x + new_relative_x + value.w/2 + 150,
-					water_churn.mid_y + value.h/2 + 150
-				]
-				where new_relative_x = (-(water_width / 2) + (slice_width * index) + (slice_width/2))
-		),
-
-
-		;
 		map(
 			water_churn.active_child_systems,
 			set(value.particles,
