On test.cfg, there lives a coin which cannot be clipped.
(Note: This does brick the rest of the game, I believe. Don't merge
this branch.)

--- a/data/objects/items/coin_silver.cfg
+++ b/data/objects/items/coin_silver.cfg
@@ -1,38 +1,15 @@
 {
 id: "coin_silver",
-prototype: ["item_acquirable"],
-properties: {
-	attractable: "true",
-	do_particle_fx: "map(range(4),spawn('coin_sparkle',midpoint_x + 1d40-20,midpoint_y + 1d40-20,0))",
-	do_sfx: "sound('coin.ogg')",
-	do_size_dilation_sequence: "[	sinusoidal_scale_transition(20,0,90, 1, 2),
-									schedule(20, sinusoidal_scale_transition(10,90,90, 0, 3))
-								]",
-	removal_time: "30",
 
-#-------------------------- visual fx --------------------------#
-	_particles: {
-		type: "obj legacy_particle_attache",
-		init: "object('legacy_particle_attache', mid_x, mid_y, {
-			_particle_type: 'treasure_sparkle',
-			zorder: me.zorder + 1,
-			parent: me,
-			time_to_die: 200,
-			custom_relative_pos_default: {mid_x: 0, mid_y: 0},
-			variable_name: '_particles',
-		})",
-		persistent: false,
-	},
-
-},
-
-
-on_create: "[add_object(_particles), set(zsub_order, y)]",
+timer_frequency: 30,
+on_timer: "[
+	set(brightness, 128), // Set something so we know the timer is hit.
+	set(clip_area, [0,0,3,3]), // But this is set, and never takes effect.
+]",
 
 on_acquired: "level.player.acquire_gold(1)",
 
 animation: {
-	no_remove_alpha_borders: true,
 	id: "normal",
 	image: "props/items.png",
 	rect: [4,27,18,41],
