Added a maximal reproduction for the clip_area bug, issue anura-engine/anura/issues/340.
	- To reproduce the bug, the exact toggle is liquid.cfg:85,
	  `end_zorder:   -91,`, vs `-90`.

--- a/data/level/Unused/Test/test.cfg
+++ b/data/level/Unused/Test/test.cfg
@@ -4,8 +4,6 @@
 	"background": "arcade",
 	"background_offset": [0,0],
 	"background_palette": "seaside_sunny",
-	"next_level": "test2.cfg",
-	"previous_level": "test2.cfg",
 	"character": [
 		{
 			"_uuid": "d6c5f74a141647028672f1503f28b494",
@@ -21,31 +19,33 @@
 				"original_level_we_spawned_on": "test.cfg"
 			},
 			"type": "frogatto_playable",
-			"x": 4128,
-			"y": -160
+			"x": 3488,
+			"y": -765
 		},
 		{
-			"_uuid": "33d4e962353c4dffadf1b91069297859",
-			"activation_area": [3358,-788,3707,-439],
+			"_uuid": "042e9d783c43401b99437ade49a9d838",
+			"activation_area": [3438,-900,3787,-551],
 			"current_frame": "normal",
 			"custom": true,
-			"label": "_4cfd6307",
+			"label": "_6354b169",
 			"property_data": {
-				"_x2_bound": 4384,
-				"_x_bound": 3488,
-				"_y2_bound": -384,
-				"_y_bound": -720
+				"_x2_bound": 4368,
+				"_x_bound": 3504,
+				"_y2_bound": -432,
+				"_y_bound": -688
 			},
-			"type": "water_controller",
-			"x": 3584,
-			"y": -544
+			"type": "water_controller_ocean",
+			"x": 3585,
+			"y": -703
 		}
 	],
 	"dimensions": [-544,-1728,4415,575],
 	"id": "test.cfg",
 	"music": "",
+	"next_level": "test2.cfg",
 	"palettes": ["seaside_sunny"],
 	"preloads": "",
+	"previous_level": "test2.cfg",
 	"segment_height": 0,
 	"segment_width": 0,
 	"serialized_objects": {
@@ -53,16 +53,6 @@
 	},
 	"set_screen_resolution_on_entry": false,
 	"tile_map": [
-		{
-			"tiles": "",
-			"unique_tiles": "",
-			"variations": "",
-			"x": 0,
-			"x_speed": 100,
-			"y": 0,
-			"y_speed": 100,
-			"zorder": "liquid_particle_effects"
-		},
 		{
 			"tiles": ",,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,cbk,cbk,cbk,cbk,cbk
 ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,cbk,cbk,cbk,cbk,cbk
@@ -137,58 +127,6 @@
 			"zorder": "interior_solid_ground_tiles"
 		},
 		{
-			"tiles": ",
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,",
-			"unique_tiles": "",
-			"variations": "",
-			"x": 0,
-			"x_speed": 100,
-			"y": -1376,
-			"y_speed": 100,
-			"zorder": "interior_shelves_and_stairs"
-		},
-		{
 			"tiles": ",,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,fbr,fbr,fbr,fbr,fbr,,,,,,,,,,,,,,,,,,,fbr,fbr,fbr,fbr,fbr
 ,
 ,
@@ -218,46 +156,6 @@
 			"y": -704,
 			"y_speed": 100,
 			"zorder": "wooden_scaffolding_background"
-		},
-		{
-			"tiles": "",
-			"unique_tiles": "",
-			"variations": "",
-			"x": 0,
-			"x_speed": 100,
-			"y": 0,
-			"y_speed": 100,
-			"zorder": "wooden_platform_objects"
-		},
-		{
-			"tiles": "",
-			"unique_tiles": "",
-			"variations": "",
-			"x": 0,
-			"x_speed": 100,
-			"y": 0,
-			"y_speed": 100,
-			"zorder": "player"
-		},
-		{
-			"tiles": "",
-			"unique_tiles": "",
-			"variations": "",
-			"x": 0,
-			"x_speed": 100,
-			"y": 0,
-			"y_speed": 100,
-			"zorder": "mushrooms_foreground"
-		},
-		{
-			"tiles": "",
-			"unique_tiles": "",
-			"variations": "",
-			"x": 0,
-			"x_speed": 100,
-			"y": 0,
-			"y_speed": 100,
-			"zorder": "water_surface"
 		}
 	],
 	"title": "",
@@ -268,8 +166,8 @@
 	"water": {
 		"area": {
 			"color": [0.274509,0.0,0.0,0.196078],
-			"object": "@eval deserialize('33d4e962353c4dffadf1b91069297859')",
-			"rect": [3488,-720,4384,-384]
+			"object": "@eval deserialize('042e9d783c43401b99437ade49a9d838')",
+			"rect": [3504,-688,4368,-432]
 		},
 		"zorder": 15
 	},
