--- a/data/object_prototypes/general/liquid.cfg
+++ b/data/object_prototypes/general/liquid.cfg
@@ -79,18 +79,14 @@ properties: {
 
 	liquid_obj_constructor: "commands :: null",
 	
-	//Make sure to call this from liquid_obj_constructor!
-	setup_shader: "commands :: 
-		if(find(level.frame_buffer_shaders, value.shader_info = 'liquid') = null,
-			add(level.frame_buffer_shaders, [{
-				begin_zorder: -10000000,
-				end_zorder: lib.zorder.get('water'),
-				//Note: liquid is a fairly expensive shader for us, as these things go. Use a cheaper shader for low-end units.
-				shader_info: if(not LOW_END_SYSTEM, 'liquid', 'liquid_LOW_END_SYSTEM'),
-				label: me.type,
-			}])
-		)
-	",
+	setup_shader: "commands :: [
+		add(level.frame_buffer_shaders, [{
+			begin_zorder: -100,
+			end_zorder:   -90, //Switch from -90 to -91 to reproduce.
+			shader_info: 'liquid',
+			label: me.type,
+		}])
+	]",
 
 
 #-------------------------- vars --------------------------#
