--- a/data/objects/effects/liquids/water_controller_ocean.cfg
+++ b/data/objects/effects/liquids/water_controller_ocean.cfg
@@ -23,45 +23,12 @@ properties: {
 		persistent: false,
 	},
 
-	underlay_obj: {
-		type: "obj water_controller_ocean.underlay",
-		init: "object('water_controller_ocean.underlay', mid_x, mid_y, {
-				parent: me,
-				time_to_die: 50,
-			})",
-		persistent: false,
-	},
-	lights_obj: {
-		type: "obj water_controller_ocean.lights",
-		init: "object('water_controller_ocean.lights', mid_x, mid_y, {
-				parent: me,
-				time_to_die: 50,
-			})",
-		persistent: false,
-	},
-	lights_transverse_obj: {
-		type: "obj water_controller_ocean.lights",
-		init: "object('water_controller_ocean.lights', mid_x, mid_y, {
-				parent: me,
-				time_to_die: 50,
-				_timeshift: 1.4,
-			})",
-		persistent: false,
-	},
-
 
 
 #-------------------------- constructors --------------------------#
-	liquid_obj_constructor: "commands :: [
-		add_particle_effect ;
-		setup_particles ;
-		[
-			setup_shader,
-			add_object(underlay_obj),
-			add_object(lights_obj),
-			add_object(lights_transverse_obj),
-		]
-
+	liquid_obj_constructor: "[
+		setup_particles,
+		setup_shader, //Toggle this on and off to toggle the clip area bug.
 	]",
 
 	add_particle_effect: "[
@@ -98,12 +65,6 @@ properties: {
 },
 
 
-on_editor_changed_variable: "[
-	
-	proto_event('liquid', 'editor_changed_variable'),
-]",
-
-
 animation: {
 	id: "normal",
 	image: "effects/particles.png",
@@ -111,90 +72,5 @@ animation: {
 	frames: 1,
 	duration: 1000,
 },
-
-
-
-object_type: [
-	{
-		id: "underlay",
-		prototype: ["effects_attache"],
-		zorder: "@include data/zorder.cfg:background_parallax_walls_further",
-		properties: {
-
-			do_setup: "[
-				set(x,_parent_obj._x_bound),
-				set(y,_parent_obj._y_bound),
-				set(draw_area, [
-					0,
-					_offset, 
-					abs(_parent_obj._x2_bound-_parent_obj._x_bound)/2, 
-					abs(_parent_obj._y2_bound-_parent_obj._y_bound)/2
-				]),
-			] asserting _parent_obj is obj liquid",
-			
-			handle_specialized_processing: "[
-				add(_offset,0.25),
-				do_setup,
-			]",
-
-		#-------------------------- vars --------------------------#
-			_offset: { type: "decimal", default: 0, persistent: false },
-		},
-
-		#we don't want to compile the image since we rely on it tiling.
-		no_compile_image: "liquids/water-texture.png",
-		animation: {
-			image: "liquids/water-texture.png",
-			id: "normal",
-			x: 0,
-			w: 256,
-			y: 0,
-			h: 256,
-		},
-	},
-	{
-		id: "lights",
-		prototype: ["effects_attache"],
-		zorder: "@include data/zorder.cfg:exterior_near_background",
-		zsub_order: 1,
-		properties: {
-		
-			do_setup: "[
-				set(alpha,127),
-
-				set(x,_parent_obj._x_bound),
-				set(y,_parent_obj._y_bound),
-				set(draw_area, [
-					5.0*_timeshift*sin(_offset), 
-					0, 
-					abs(_parent_obj._x2_bound-_parent_obj._x_bound)/2, 
-					img_h/2
-				]),
-			] asserting _parent_obj is obj liquid",
-			
-			handle_specialized_processing: "[
-				add(_offset,1.5),
-				do_setup,
-			]",
-
-		
-		#-------------------------- vars --------------------------#
-			_offset: { type: "decimal", default: 0, persistent: false },
-			_timeshift: { type: "decimal", default: 0, persistent: false },
-		},
-
-		#we don't want to compile the image since we rely on it tiling.
-		no_compile_image: "liquids/water-texture-lights.png",
-		animation: {
-			image: "liquids/water-texture-lights.png",
-			blend:["src_alpha","one"],
-			id: "normal",
-			x: 0,
-			w: 256,
-			y: 0,
-			h: 128,
-		},
-	},
-],
 
 }
