Established correct horizontal clipping for the water particles.

--- a/data/object_prototypes/base/effects_attache.cfg
+++ b/data/object_prototypes/base/effects_attache.cfg
@@ -175,11 +175,11 @@ on_being_added: "
 	]",
 
 
-//animation: {
-//	id: "normal",
-//	image: "effects/particles.png",
-//	x: 86, y: 73, w: 0, h: 0,
-//	duration: -1,
-//},
+animation: {
+	id: "normal",
+	image: "effects/particles.png",
+	x: 86, y: 73, w: 0, h: 0,
+	duration: -1,
+},
 
 }
