--- a/data/objects/effects/attaches/particle_attache_slicer.cfg
+++ b/data/objects/effects/attaches/particle_attache_slicer.cfg
@@ -58,7 +58,15 @@ properties: {
 					lib.math.round( water_height )
 				]*/
 
-				[water_boundaries[0]-mid_x, water_boundaries[1]-mid_y, water_boundaries[2] - water_boundaries[0], water_boundaries[3] - water_boundaries[1] ]
+				[
+					-(slice_width / 2), //water_boundaries[0]-mid_x,
+					water_boundaries[1]-mid_y,
+					(slice_width*1), //water_boundaries[2] - water_boundaries[0],
+					water_boundaries[3] - water_boundaries[1]
+				]
+//				[water_boundaries[0]-mid_x, water_boundaries[1]-mid_y, water_boundaries[2] - water_boundaries[0], water_boundaries[3] - water_boundaries[1] ]
+
+
 //			set(value.clip_area, [_x_bound-mid_x, _y_bound-mid_y, _x2_bound - _x_bound, _y2_bound - _y_bound, ]),
 
 
