Established correct vertical clipping for the water particle slices.

--- a/data/objects/effects/attaches/particle_attache_slicer.cfg
+++ b/data/objects/effects/attaches/particle_attache_slicer.cfg
@@ -60,9 +60,9 @@ properties: {
 
 				[
 					-(slice_width / 2), //water_boundaries[0]-mid_x,
-					water_boundaries[1]-mid_y,
-					(slice_width*1), //water_boundaries[2] - water_boundaries[0],
-					water_boundaries[3] - water_boundaries[1]
+					-(water_height / 2), //water_boundaries[1]-mid_y,
+					(slice_width * 1), //water_boundaries[2] - water_boundaries[0],
+					(water_height * 1), //water_boundaries[3] - water_boundaries[1]
 				]
 //				[water_boundaries[0]-mid_x, water_boundaries[1]-mid_y, water_boundaries[2] - water_boundaries[0], water_boundaries[3] - water_boundaries[1] ]
 
