Cleaned up the debug stuff in the liquids.

--- a/data/objects/effects/attaches/particle_attache_slicer.cfg
+++ b/data/objects/effects/attaches/particle_attache_slicer.cfg
@@ -8,7 +8,7 @@ always_active: true,
 properties: {
 	child_systems: "
 		map(
-			range(dump(child_system_count)),
+			range(child_system_count),
 			object('particle_attache', x,y, {
 				_particle_type: _particle_type,
 				parent: me,
@@ -42,7 +42,7 @@ properties: {
 				set(value.relative_x,  new_relative_x ),
 				set(value.activation_border,  slice_width),
 				set(value.activation_area, new_activation_rectangle ),
-				set(value.clip_area, dump(new_clip_rectangle))
+				set(value.clip_area, new_clip_rectangle)
 			]
 				where new_activation_rectangle = [
 					lib.math.round( me.mid_x - new_relative_x - water_width/2 ),
@@ -51,24 +51,12 @@ properties: {
 					lib.math.round( water_boundaries[3] )
 				]
 
-				where new_clip_rectangle = /*[
-					lib.math.round( me.mid_x - new_relative_x - value.w/2 - 0 ),
-					lib.math.round( water_boundaries[0] - (me.mid_x) ),
-					lib.math.round( me.mid_x + new_relative_x + value.w/2 + 0 ),
-					lib.math.round( water_height )
-				]*/
-
-				[
-					-(slice_width / 2), //water_boundaries[0]-mid_x,
-					-(water_height / 2), //water_boundaries[1]-mid_y,
-					(slice_width * 1), //water_boundaries[2] - water_boundaries[0],
-					(water_height * 1), //water_boundaries[3] - water_boundaries[1]
+				where new_clip_rectangle = [
+					-(slice_width / 2),
+					-(water_height / 2),
+					(slice_width * 1),
+					(water_height * 1),
 				]
-//				[water_boundaries[0]-mid_x, water_boundaries[1]-mid_y, water_boundaries[2] - water_boundaries[0], water_boundaries[3] - water_boundaries[1] ]
-
-
-//			set(value.clip_area, [_x_bound-mid_x, _y_bound-mid_y, _x2_bound - _x_bound, _y2_bound - _y_bound, ]),
-
 
 				where new_relative_x = (-(water_width / 2) + (slice_width * index) + (slice_width/2))
 		),
