--- a/data/object_prototypes/general/liquid.cfg
+++ b/data/object_prototypes/general/liquid.cfg
@@ -53,7 +53,7 @@ properties: {
 
 	slice_threshold: "decimal :: 300.0",
 	water_width: "int :: abs(_x2_bound - _x_bound)",
-	water_height: "int :: abs(dump(_y2_bound) - dump(_y_bound))",
+	water_height: "int :: abs(_y2_bound - _y_bound)",
 	water_boundaries: "[int,int,int,int] :: [_x_bound, _y_bound, _x2_bound, _y2_bound]",
 	child_system_count: "int :: lib.math.ceil((_x2_bound - _x_bound) / slice_threshold )",
 	slice_width: "int :: lib.math.round(water_width / child_system_count)",
