--- a/data/objects/effects/liquids/water_controller_ocean.cfg
+++ b/data/objects/effects/liquids/water_controller_ocean.cfg
@@ -19,8 +19,8 @@ properties: {
 			time_to_die: 0,
 			x:x, y:y,
 			zorder: lib.zorder.get('liquid_particle_effects'),
-			child_system_count: (lib.math.ceil((_x2_bound - _x_bound) / 300.0 )),
-			slice_width: water_width / (lib.math.ceil((_x2_bound - _x_bound) / 300.0 )),
+			child_system_count: child_system_count,
+			slice_width: slice_width,
 			water_width: water_width,
 			water_height: water_height,
 			water_boundaries: water_boundaries,
