Tweaked a line of text that was spilling out of the conversation box bounds.

--- a/data/level/Seaside/grassy-path.cfg
+++ b/data/level/Seaside/grassy-path.cfg
@@ -176,7 +176,7 @@
 											[~Fortunately, Frogatto can jump off of walls, too!~],
 											[~To do this, do a walking jump into the wall.~],
 											[~If you bump into a wall at the crest of a jump,\\nyou will cling to it!~],
-											[~If you don't get a running start, you can still\\ncling on as long as you hold down the movement key toward the wall,\\nand then press jump whilst it's held down.~],
+											[~If you don't get a running start, you can still\\ngrab on by both pressing the move key\\nthat faces towards the wall, and also\\npressing jump whilst the move key is held down.~],
 											[~Whilst you are clinging to the wall,\\npressing jump will make you rebound off.~],
 											[~This is especially useful if two walls are\\nfacing each other, because then you can\\nrebound over and over between them.~],
 											[~This lets you ascend vertical columns.~])",
