Fixed a regression where the player's boss list wasn't emptying across levels, meaning NPCs no longer considered it safe to talk to the player.

--- a/data/objects/playable/frogatto_playable.cfg
+++ b/data/objects/playable/frogatto_playable.cfg
@@ -26,6 +26,7 @@ properties: {
 		set_up_gui
 		;
 		gui_boss_progress_display.reset(),
+		set(boss_list, []),
 
 		/* some mostly cosmetic/gameplay-related stuff */
 		animation('stand'),
