--- a/data/objects/playable/frogatto_playable.cfg
+++ b/data/objects/playable/frogatto_playable.cfg
@@ -28,6 +28,7 @@ properties: {
 		set_up_gui
 		;
 		gui_boss_progress_display.reset(),
+		set(boss_list, []),
 
 		/* some mostly cosmetic/gameplay-related stuff */
 		animation('stand'),
