Fix for inventory screen bestiary not working.

--- a/data/object_prototypes/base/player_controlled.cfg
+++ b/data/object_prototypes/base/player_controlled.cfg
@@ -47,6 +47,7 @@ properties: {
 
 	player_controlled_obj_constructor: "commands :: [
 														_adjust_level_dim_for_small_levels,
+														_add_shader_fix_for_clip_area_to_fix_anura_issue_340,
 													]",
 	general_player_obj_constructor: "commands :: null",	//e.g. `player_controlled_platformer_character`
 	specific_player_obj_constructor: "commands :: null",	//e.g. `frogatto_playable`
@@ -122,6 +123,17 @@ properties: {
 		if(level.camera_position[2] > level.dimensions[2] - level.dimensions[0],
 			set(level.dimensions, [level.dimensions[0]-diff/2, level.dimensions[1], level.dimensions[2]+diff/2, level.dimensions[3]])
 			where diff = level.camera_position[2] - (level.dimensions[2] - level.dimensions[0])
+		)
+	",
+	
+	_add_shader_fix_for_clip_area_to_fix_anura_issue_340: "commands ::
+		if(find(level.frame_buffer_shaders, value.shader_info = 'identity_op') = null,
+			add(level.frame_buffer_shaders, [{
+				begin_zorder: lib.zorder.get('lowest_zorder'),
+				end_zorder: lib.zorder.get('highest_zorder'),
+				shader_info: 'identity_op',
+				label: 'Cheap identity op to fix clipping for https://github.com/anura-engine/anura/issues/340.',
+			}])
 		)
 	",
 
