--- a/data/object_prototypes/general/liquid.cfg
+++ b/data/object_prototypes/general/liquid.cfg
@@ -91,7 +91,7 @@ properties: {
 	setup_shader: "commands :: 
 		if(find(level.frame_buffer_shaders, value.shader_info = 'liquid') = null,
 			add(level.frame_buffer_shaders, [{
-				begin_zorder: -10000000,
+				begin_zorder: lib.zorder.get('lowest_zorder'),
 				end_zorder: lib.zorder.get('water'),
 				//Note: liquid is a fairly expensive shader for us, as these things go. Use a cheaper shader for low-end units.
 				shader_info: if(not LOW_END_SYSTEM, 'liquid', 'liquid_LOW_END_SYSTEM'),
