--- a/data/zorder.cfg
+++ b/data/zorder.cfg
@@ -1,4 +1,6 @@
 {
+"lowest_zorder":								-10000000,		# utility, we need to know the farthest layer to apply shaders to. (This is very large because we've got background layers to account for which don't use zorder.cfg, I think.)
+
 "background_deep_parallax_objects":				-400,			# seaside parallax houses, and distant landmarks or vehicles (when we make any).
 "background_parallax_walls_further":			-235,			# distant parallax surfaces, like the rear walls in some dungeon levels.
 "background_parallax_walls_underlays":			-230,			# distant parallax surfaces, like the rear walls in some dungeon levels.
@@ -97,4 +99,6 @@
 "overlaid_gui_dialog_overlay":					514,
 
 "overlaid_gui_dialog_items":					520,
+
+"highest_zorder":								6000,			# utility, we need to know the top layer to apply shaders to. Note: 6000 because there's some very, very high zorder stuff in the bestiary. (We should fix this.)
 }
