--- a/data/objects/playable/frogatto_playable.cfg
+++ b/data/objects/playable/frogatto_playable.cfg
@@ -20,6 +20,8 @@ editor_info: {
 no_compile_image: "characters/frogatto-spritesheet1.png,characters/frogatto-spritesheet3.png,characters/frogatto-spritesheet4.png,characters/frogatto-spritesheet5.png",
 load_variations: "fat",
 
+events: { create: "[debug('hi')]" },
+
 properties: {						
 #-------------------------- constructor/destructor logic --------------------------#
 	common_frogatto_specific_constructor_commands: "	[
