Made bestiary pane scroll with arrow keys / directional controls.
	- TODO: dpad?

--- a/data/objects/gui-components/inventory-screen/bestiary_pane.cfg
+++ b/data/objects/gui-components/inventory-screen/bestiary_pane.cfg
@@ -123,15 +123,29 @@ properties: {
 			switch(input,
 				enum arrow_left,	null,
 				enum arrow_right,	null,
-				enum arrow_up,		scroller.add_scroll_offset({x:0, y: -10}),
-				enum arrow_down,	scroller.add_scroll_offset({x:0, y:  10}),
+				enum arrow_up,		null,
+				enum arrow_down,	null,
 		
 				enum trigger_1, 	null
 		)]",
 
 },
 
-
+//Make it so that the bestiary scrolls when you're holding up or down.
+//TODO: Read these controls from user configuration.
+on_process: "scroller.add_scroll_offset(sum(
+	[{
+		Down:     {x:0, y: 10 }, //arrow keys
+		s:        {x:0, y: 10 }, //qwerty, wasd cluster
+		o:        {x:0, y: 10 }, //dvorak, ,aoe cluster
+		Up:       {x:0, y:-10 }, //arrow keys
+		w:        {x:0, y:-10 }, //qwerty, wasd cluster
+		',':      {x:0, y:-10 }, //dvorak, ,aoe cluster
+		PageUp:   {x:0, y:-100},
+		PageDown: {x:0, y: 100},
+	}[k] | k <- level.player.ctrl_keys],
+	{x:0, y: 0}
+))",
 
 
 animation: {
@@ -204,7 +218,7 @@ object_type: [
 						//debug(displayed_obj_animation);
 						//debug(me.animation_obj)
 					]",
-		on_end_anim: "set(animation, displayed_obj_animation)",		
+		on_end_anim: "set(animation, displayed_obj_animation)",
 	}
 ],
 }
