Fixed a couple of typos.

--- a/data/level/Forest/rustic-route.cfg
+++ b/data/level/Forest/rustic-route.cfg
@@ -1152,7 +1152,7 @@
 									[~Basically where Milgram lives.\\nHis castle?  He lives in one, right?~],
 						imoti,		[~Hmm.  Yes, I believe I've heard it said that way.~],
 									[~But ... hmm, you may not end up getting\\nvery far, I should think so.~],
-									[~He would be further along the road to our west.~],
+									[~He would be further along the road to our east.~],
 									[~There is some debatable wilderness, that way,\\nbut that is the right direction.~],
 									[~But you would be stopped much sooner\\nthan that, yes, you would.~],
 									set(level.player.animation, 'emote_confused'),
@@ -1180,7 +1180,7 @@
 									set(level.player.animation, 'emote_confused'),
 						frogatto,	[~I'm trying to get to Milgram's castle.~],
 						imoti,		[~That is quite the trek.~],
-									[~He can be found to the west,\\nbut you may find the route inaccessible.~],
+									[~He can be found to the east,\\nbut you may find the route inaccessible.~],
 									set(level.player.animation, 'emote_geez'),
 						frogatto,	[~Why?~],
 						imoti,		[~You would be best served by\\nseeing for yourself.~],
