--- a/data/level/Forest/tempo-village.cfg
+++ b/data/level/Forest/tempo-village.cfg
@@ -2276,7 +2276,7 @@
 				self,			[~Is everything all right?~],
 								set(level.player.animation, 'emote_confused'),
 				frogatto,		[~What? Yeah. I'm… fine.~],
-				self,			[~You look like you’ve seen a … <em>ghost</em>.~],
+				self,			[~You look like you've seen a … <em>ghost</em>.~],
 			
 				if(level.player.get_stored_event('truggle_confrontational') = 1, /* If Frogatto argued with Truggle */
 					[
