Added -some- way to do alternate descriptions when i.e. you complete a set of heart pieces.

--- a/data/objects/items/generic_acquirable_inventory_item.cfg
+++ b/data/objects/items/generic_acquirable_inventory_item.cfg
@@ -59,7 +59,26 @@ properties: {
 	item_info: "class inventory_item :: frogatto.item_info(kind)",
 
 	short_item_name: "string :: lower(item_info.name)",
-	short_store_description: "[string] :: item_info.short_store_description",
+	short_store_description: "[string] :: store_description_override",
+
+
+
+	/*
+		We need to have a special line of dialogue sometimes, depending on items you've got.  For example, when you get a partial heart container, we want the default line when you get only part of the whole thing, but we want a special line of dialogue right when you manage to complete the set and make a full heart.
+
+		TODO Dirty hack here:  ideally it might be better to put this in the items.cfg `description` field, but that would necessitate a pretty dangerous conversion of that type from a string to a function taking the player object as a parameter, followed by a string.
+	*/
+	store_description_override: "[string] ::
+		switch(me.kind,
+			enum item_partial_heart_container,  if( level.player.number_of_item(enum item_partial_heart_container) >= 3,  
+					[~You've completed an entire heart!~],
+					item_info.short_store_description
+				),
+			item_info.short_store_description
+		)
+	",
+
+
 
 	icon_animation: "map ::
 		{
