Fixed the display of partial heart pieces in the inventory status pane.

--- a/data/objects/gui-components/inventory-screen/status_pane.cfg
+++ b/data/objects/gui-components/inventory-screen/status_pane.cfg
@@ -60,7 +60,7 @@ properties: {
 			parent: me
 		})
 			where desired_anim = switch(
-											(obj frogatto_playable <- level.player).num_partial_hearts,
+											level.player.number_of_item(enum item_partial_heart_container),
 											3, 'heart_pieces_three_quarters',
 											2, 'heart_pieces_half',
 											1, 'heart_pieces_one_quarters',
