Wired in the bestiary as a purchaseable item in the forest store.

--- a/data/items.cfg
+++ b/data/items.cfg
@@ -49,6 +49,7 @@
 		id: "@eval enum item_creature_field_guide",
 		description: "~A handy-dandy notepad to record your encounters with flora, fauna, and the savage and inscrutable beasts of the wild.~",
 		short_store_description: "[~This is a handy-dandy notepad, perfect for\ncataloguing the inevitably hostile wilderness.~]",
+		price: 500,
 		count_limit: 1,
 		item_category: "@eval enum passive",
 		anim_rect: [160,29,184,53],
