--- a/data/level/Forest/tempo-village-house-store.cfg
+++ b/data/level/Forest/tempo-village-house-store.cfg
@@ -19,7 +19,7 @@
 		{
 			"_uuid": "deaf3418304d412c80e5e6be85c14c6f",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_2104b298",
 			"property_data": {
 				"sound_file": "ambient/moist-underground.ogg"
@@ -146,10 +146,10 @@
 			"current_frame": "normal",
 			"custom": true,
 			"label": "_67af979",
-			"type": "store_item",
 			"property_data": {
 				"settable_item_id": "@eval enum item_greater_mana_talisman"
 			},
+			"type": "store_item",
 			"x": -93,
 			"y": 257
 		},
@@ -158,10 +158,10 @@
 			"current_frame": "normal",
 			"custom": true,
 			"label": "_68d788ff",
-			"type": "store_item",
 			"property_data": {
 				"settable_item_id": "@eval enum item_health_potion"
 			},
+			"type": "store_item",
 			"x": 911,
 			"y": 254
 		},
@@ -526,6 +526,18 @@
 			"type": "light_controller",
 			"x": 998,
 			"y": 205
+		},
+		{
+			"_uuid": "2730d0dd8eab4b02881f912efd33e611",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_72198b32",
+			"property_data": {
+				"settable_item_id": "@eval enum item_creature_field_guide"
+			},
+			"type": "store_item",
+			"x": -243,
+			"y": 257
 		}
 	],
 	"dimensions": [-640,-448,1663,599],
