--- a/data/objects/gui-components/inventory-screen/inventory_screen_controller_2.cfg
+++ b/data/objects/gui-components/inventory-screen/inventory_screen_controller_2.cfg
@@ -62,7 +62,7 @@ properties: {
 	panes_to_add: "[{test: any, add: function(int) -> commands}] ::
 		filter([
 			{	
-				test: true,
+				test: level.player.has_item(enum item_creature_field_guide),
 				add: add_individual_panel('bestiary_pane')
 			},
 			{	
