--- a/data/objects/playable/frogatto_playable.cfg
+++ b/data/objects/playable/frogatto_playable.cfg
@@ -369,6 +369,7 @@ properties: {
 		;hax_gazer
 	
 		;set_item_amount(enum item_magic_map, 1),
+		;set_item_amount(enum item_creature_field_guide, 1),
 		;set_item_amount(enum item_heart_container, 5),
 		;add_item(enum item_fire_breath_talisman, 1),
 		;add_item(enum item_energy_shot_talisman, 1),
@@ -386,6 +387,7 @@ properties: {
 
 
 		;set_item_amount(enum item_magic_map, 1),
+		;set_item_amount(enum item_creature_field_guide, 1),
 		;set_item_amount(enum item_heart_container, 6),
 		;add_item(enum item_fire_breath_talisman, 1),
 		;add_item(enum item_energy_shot_talisman, 1),
@@ -400,6 +402,7 @@ properties: {
 
 
 		;set_item_amount(enum item_magic_map, 1),
+		;set_item_amount(enum item_creature_field_guide, 1),
 		;set_item_amount(enum item_heart_container, 6),
 		;add_item(enum item_fire_breath_talisman, 1),
 		;add_item(enum item_energy_shot_talisman, 1),
