--- a/data/objects/gui-components/inventory-screen/status_pane.cfg
+++ b/data/objects/gui-components/inventory-screen/status_pane.cfg
@@ -14,6 +14,7 @@ properties: {
 		spawn_heart_piece_indicator,
 		spawn_coin_counter,
 		spawn_death_tracker,
+		spawn_player_representation,
 	]",
 
 	spawn_hearts: "commands :: [		
@@ -77,6 +78,12 @@ properties: {
 			txt: str(level.player.coins),
 		}),
 		
+	]",
+
+	spawn_player_representation: "commands :: [
+		spawn('status_pane.player_representation', -181, -150, {
+			parent: me
+		}),
 	]",
 
 	spawn_death_tracker: "commands :: [
@@ -198,6 +205,29 @@ object_type: [
 		},		
 	},
 
+
+
+	{
+		id: "player_representation",
+
+		on_end_anim: "animation(animation)",
+		animation: [{
+			"@base": true,
+			scale: 3,
+			image: "characters/frogatto-spritesheet1.png",
+			frames: 11,
+			duration: 5,
+			pad: 3,
+			no_remove_alpha_borders: true,
+		},{
+			id: "stand",
+			duplicates: 6,
+			rect: [2,89,33,121],
+		},{
+			id: "stand", //blink variant
+			rect: [2,125,33,157],
+		},]
+	},
 
 #-------------------------- the giant heart-piece indicator --------------------------#
 	{
