Grafted in a bit of guidance if you try to visit prospera without getting the passphrase.

--- a/data/level/Forest/prosperas-promontory.cfg
+++ b/data/level/Forest/prosperas-promontory.cfg
@@ -1100,40 +1100,58 @@
 			"custom": true,
 			"label": "_15872d26",
 			"on_start_level": "if(level.player.get_stored_event('finished_initial_prospera_conversation'), lib.audio.play_music(me,'CrispDrum.ogg'), lib.audio.play_music(me,'TurnedIntoAFrog.ogg') )",
-			"on_triggered": "if( level.player.get_stored_event('frogatto_knows_about_prospera_passphrase') and (not level.player.get_stored_event('prosperas_elevator_active')),
-				[
-					level.player.store_event('prosperas_elevator_active', 1),
-					speech_dialog(
-									set(level.zoom, 1.5),
-									set(level.focus, [level.player]),
-									set(level.player.animation, 'emote_confused'),
-						frogatto,	[~I hope this was the rock Imoti was talking about.\\nOtherwise I'm gonna look really ... dumb.~],
-									set(level.player.animation, 'emote_geez'),
-									[~I also hope he didn't just <em>make that up</em>.\\nA fella could do that, you know...~],
-									set(level.player.animation, 'emote_raisedfinger'),
-									[~<em>Well, okay mister rock...</em>~],
-									set(level.player.animation, 'emote_talk'),
-									[~\"Skronzible.\"~],
-									[~...~],
-									set(level.player.facing, 1),
-									[~...~],
-									set(level.player.animation, 'emote_geez'),
-									[~And ... is something supposed to happen?~],
-									set(level.player.animation, 'emote_confused'),
-									[~I just got taken for a ride, didn't I...~],
-									[~...~],
-									set(level.player.facing, -1),
-									sound('magic-activation.wav'),
-									fire_event(elevator, 'do_stuff'),
-									set(level.player.animation, 'emote_raisedfinger'),
-									[~Hey, hey!  Something <em>did</em> happen!\\nNice.~],
+			"on_triggered": "if( (not level.player.get_stored_event('prosperas_elevator_active')) and (not me.custom_storage['remove_dialog'] = true),
+				if( level.player.get_stored_event('frogatto_knows_about_prospera_passphrase'),
+					[
+						level.player.store_event('prosperas_elevator_active', 1),
+						speech_dialog(
+										set(level.zoom, 1.5),
+										set(level.focus, [level.player]),
+										set(level.player.animation, 'emote_confused'),
+							frogatto,	[~I hope this was the rock Imoti was talking about.\\nOtherwise I'm gonna look really ... dumb.~],
+										set(level.player.animation, 'emote_geez'),
+										[~I also hope he didn't just <em>make that up</em>.\\nA fella could do that, you know...~],
+										set(level.player.animation, 'emote_raisedfinger'),
+										[~<em>Well, okay mister rock...</em>~],
+										set(level.player.animation, 'emote_talk'),
+										[~\"Skronzible.\"~],
+										[~...~],
+										set(level.player.facing, 1),
+										[~...~],
+										set(level.player.animation, 'emote_geez'),
+										[~And ... is something supposed to happen?~],
+										set(level.player.animation, 'emote_confused'),
+										[~I just got taken for a ride, didn't I...~],
+										[~...~],
+										set(level.player.facing, -1),
+										sound('magic-activation.wav'),
+										fire_event(elevator, 'do_stuff'),
+										set(level.player.animation, 'emote_raisedfinger'),
+										[~Hey, hey!  Something <em>did</em> happen!\\nNice.~],
 
-									set(level.focus, []),
-									set(level.zoom, 1)
+										set(level.focus, []),
+										set(level.zoom, 1)
 			
-					),
-				],
-
+						),
+					],
+					[
+						set(me.custom_storage['remove_dialog'], true),
+						speech_dialog(
+										set(level.zoom, 1.5),
+										set(level.focus, [level.player]),
+										set(level.player.animation, 'emote_confused'),
+							frogatto,	[~Okay, so this...\\nis supposed to be where Prospera lives.~],
+										set(level.player.animation, 'emote_geez'),
+										[~Is there... uh ...\\nsome kind of passphrase?~],
+										set(level.player.animation, 'emote_confused'),
+										[~What am I supposed to do?~],
+										set(level.player.animation, 'emote_impatient'),
+										[~I guess I go back to that Imoti guy?~],
+										set(level.focus, []),
+										set(level.zoom, 1),
+						),
+					],
+				),
 				remove_object(me)
 			)
 					where elevator = (obj triggerable <- find_or_die(level.chars, value is obj triggerable and value.event = 'prosperas_elevator_active')) 
